# gumdrop-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: basic_chat.py  hello.py  multi_provider.py  pipeline_local.py  signed_cartridge.py  thumbprints.py  visual_identity.py
experiments/: vacuum_probe.py
gumdrop/: __init__.py  cartridge.py  identity.py  keyring.py  memory.py  pipeline.py  session.py  spec.py  thumbprint.py  visual.py
gumdrop/providers/: __init__.py  anthropic.py  base.py  lmstudio.py  openai.py
tests/: test_cartridge.py
