[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gumdrop-sdk"
version = "0.1.0"
description = "Portable AI Identity. Own your companion."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dustin Parsons", email = "dustinparsons@pm.me" },
]
keywords = ["ai", "llm", "identity", "personality", "portable", "companion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30.0"]
openai = ["openai>=1.30.0"]
all = ["anthropic>=0.30.0", "openai>=1.30.0", "httpx>=0.27.0"]

[project.urls]
Homepage = "https://github.com/dustinparsons/gumdrop-sdk"
Repository = "https://github.com/dustinparsons/gumdrop-sdk"
Issues = "https://github.com/dustinparsons/gumdrop-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["gumdrop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
